--- a/index.html
+++ b/index.html
@@ -3,12 +3,45 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Deno helloworld</title>
+		<title>Deno chat</title>
 	</head>
 	<body>
-		<h1>This server is running Deno</h1>
-		<p>
-			Watch out for trouble.
-		</p>
+		<div id="app"></div>
+		<script type="module">
+			import {
+				html,
+				render,
+				useEffect,
+				useState,
+			} from 'https://unpkg.com/htm/preact/standalone.module.js';
+			let ws;
+
+			function Chat() {
+				const [messages, setMessages] = useState([]);
+				const onReceiveMessage = ({ data }) => setMessages((m) => [...m, data]);
+				const onSendMessage = (e) => {
+					const msg = e.target[0].value;
+					e.preventDefault();
+					ws.send(msg);
+					e.target[0].value = '';
+				};
+				useEffect(() => {
+					if (ws) ws.close();
+					ws = new WebSocket(`ws://${window.location.host}/ws`);
+					ws.addEventListener('message', onReceiveMessage);
+					return () => {
+						ws.removeEventListener('message', onReceiveMessage);
+					};
+				}, []);
+				return html`
+					${messages.map((message) => html` <div>${message}</div> `)}
+					<form onSubmit=${onSendMessage}>
+						<input type="text" />
+						<button>Send</button>
+					</form>
+				`;
+			}
+			render(html`<${Chat} />`, document.getElementById('app'));
+		</script>
 	</body>
 </html>
